--- a/SORRY.html
+++ b/SORRY.html
@@ -18,17 +18,17 @@
         
       </div>
       <div class="page text-page" onclick="movePage(this, 3)">
-        <p><img src="d:\test\Forgive-Me-main\WhatsApp Image 2024-06-29 at 02.48.14.jpeg" height="100%" width="95%"></p>
+        <p><img src="WhatsApp Image 2024-06-29 at 02.48.14.jpeg" height="100%" width="95%"></p>
         
       </div>
       <div class="page text-page" onclick="movePage(this, 4)">
-        <img src="d:\test\Forgive-Me-main\WhatsApp Image 2024-06-29 at 02.48.14 (2).jpeg" height="100%" width="100%">
+        <img src="WhatsApp Image 2024-06-29 at 02.48.14 (2).jpeg" height="100%" width="100%">
       </div>
       <div class="page text-page" onclick="movePage(this, 5)">
-        <img src="d:\test\Forgive-Me-main\WhatsApp Image 2024-06-30 at 21.18.46.jpeg" height="100%" width="100%">
+        <img src="WhatsApp Image 2024-06-30 at 21.18.46.jpeg" height="100%" width="100%">
       </div>
       <div class="page text-page" onclick="movePage(this, 6)">
-        <img src="d:\test\Forgive-Me-main\WhatsApp Image 2024-06-29 at 02.48.13.jpeg" height="100%" width="100%" just >
+        <img src="WhatsApp Image 2024-06-29 at 02.48.13.jpeg" height="100%" width="100%" just >
       </div>
       <div class="page text-page">
         <h2>Selamat ulang tahun</h2>
